; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_mutation.c_init_mutation.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_mutation.c_init_mutation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@content_utils = common dso_local global i32* null, align 8
@NS_ICONTENTUTILS_CID = common dso_local global i32 0, align 4
@IID_nsIFactory = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Could not create nsIContentUtils service: %08x\0A\00", align 1
@IID_nsIContentUtils = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"Could not create nsIContentUtils instance: %08x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_mutation(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %14, label %7

7:                                                ; preds = %1
  %8 = load i32*, i32** @content_utils, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i32*, i32** @content_utils, align 8
  %12 = call i32 @nsIContentUtils_Release(i32* %11)
  store i32* null, i32** @content_utils, align 8
  br label %13

13:                                               ; preds = %10, %7
  br label %35

14:                                               ; preds = %1
  %15 = load i32*, i32** %2, align 8
  %16 = bitcast i32** %3 to i8**
  %17 = call i32 @nsIComponentManager_GetClassObject(i32* %15, i32* @NS_ICONTENTUTILS_CID, i32* @IID_nsIFactory, i8** %16)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i64 @NS_FAILED(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %14
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @ERR(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %22)
  br label %35

24:                                               ; preds = %14
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @nsIFactory_CreateInstance(i32* %25, i32* null, i32* @IID_nsIContentUtils, i8** bitcast (i32** @content_utils to i8**))
  store i32 %26, i32* %4, align 4
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @nsIFactory_Release(i32* %27)
  %29 = load i32, i32* %4, align 4
  %30 = call i64 @NS_FAILED(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %24
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @ERR(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %13, %21, %32, %24
  ret void
}

declare dso_local i32 @nsIContentUtils_Release(i32*) #1

declare dso_local i32 @nsIComponentManager_GetClassObject(i32*, i32*, i32*, i8**) #1

declare dso_local i64 @NS_FAILED(i32) #1

declare dso_local i32 @ERR(i8*, i32) #1

declare dso_local i32 @nsIFactory_CreateInstance(i32*, i32*, i32*, i8**) #1

declare dso_local i32 @nsIFactory_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
